--- a/myProject/src/main/webapp/resources/css/layout.css
+++ b/myProject/src/main/webapp/resources/css/layout.css
@@ -8,6 +8,8 @@ div#main{
 	font-family: "맑은 고딕";
 }
 div#main_header{
+	width:100%;
+	height:100px;
 	margin-bottom: 10px;
 	padding: 0 10px 0 0;
 }
