--- a/myProject/src/main/webapp/resources/css/layout.css
+++ b/myProject/src/main/webapp/resources/css/layout.css
@@ -199,4 +199,49 @@ input[id="zipcode"]{
 
 
 
+/* 헤더  ul,li style */
+
+div#main_header ul, ol, li { 
+	list-style:none; 
+	margin:0; 
+	padding:0; 
+}
+
+div#main_header ul.main-menu {}
+
+div#main_header ul.main-menu > li { 
+	display:inline-block; 
+	width:80px; 
+	padding:5px 10px; 
+	margin:5px; 
+	text-align:center; 
+	position:relative; 
+}
+
+div#main_header ul.main-menu > li:hover { 
+	background:#fff; 
+}
+
+div#main_header ul.main-menu > li ul.submenu { 
+	display:none; position:absolute; top:30px; left:0; 
+}
+
+div#main_header ul.main-menu > li:hover ul.submenu { 
+	display:block; 
+}
+
+div#main_header ul.main-menu > li ul.submenu > li { 
+	display:inline-block; 
+	width:80px; 
+	padding:5px 10px; 
+	background:#eee; 
+	border:1px solid #eee; 
+	text-align:center; 
+}
+
+div#main_header ul.main-menu > li ul.submenu > li:hover { 
+	background:#fff; 
+}
+
+
 
