--- a/myProject/src/main/webapp/resources/css/layout.css
+++ b/myProject/src/main/webapp/resources/css/layout.css
@@ -208,6 +208,7 @@ input[id="zipcode"]{
 
 /* 헤더  ul,li style */
 
+/*
 div#main_header ul, ol, li { 
 	list-style:none; 
 	margin:0; 
@@ -236,19 +237,7 @@ div#main_header ul.main-menu > li ul.submenu {
 div#main_header ul.main-menu > li:hover ul.submenu { 
 	display:block; 
 }
-
-div#main_header ul.main-menu > li ul.submenu > li { 
-	display:inline-block; 
-	width:80px; 
-	padding:5px 10px; 
-	background:#eee; 
-	border:1px solid #eee; 
-	text-align:center; 
-}
-
-div#main_header ul.main-menu > li ul.submenu > li:hover { 
-	background:#fff; 
-}
+*/
 
 
 
