--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -197,21 +197,107 @@ input[id="zipcode"]{
 	width:95px;
 }
 
+.tipBoardTable td{
+	height:50px;
+}
+
 /*================페이지 10개씩,20개씩등등 보기=============*/
+.boardListBelowPart{
+	position:relative;
+}
+
+.boardPaging-selectbox {
+	position : absolute;
+	top:10px;
+	right:10px;
+	float: left;
+	width: 100px;
+	height: 40px;
+	margin-right: 5px;
+	z-index: 10;
+}
+
+ul.selectbox-options {
+	position: absolute;
+	width: 100%;
+	height: 40px;
+	max-height: 40px;
+	margin: 0;
+	padding: 0;
+	border: 1px solid #aaa;
+	background-color: #fcfcfc;
+	z-index: 9;
+	transition: max-height .5s ease-out;
+}
+ul.selectbox-options li {
+	list-style: none;
+}
+ul.selectbox-options.opened {
+	height: auto;
+	max-height: 500px;
+}
+ul.selectbox-options li {
+	display: none;
+	height: 40px;
+	padding: 0 10px;
+	line-height: 40px;
+	font-size: 12px;
+}
+ul.selectbox-options li.selected {
+	font-weight: bold;
+}
+ul.selectbox-options li.selected,
+ul.selectbox-options li:first-child,
+ul.selectbox-options.opened li.selected:first-child {
+	background-repeat: no-repeat;
+	background-image: url(http://rootbox.co.kr/resources/customized_checkbox/customized_selectbox.png);
+	background-position: 100% 6px;	
+}
+ul.selectbox-options.opened li:first-child,
+ul.selectbox-options.opened li.selected:first-child {
+	background-position: 100% -22px;
+}
+ul.selectbox-options.opened li {
+	display: block;
+}
+ul.selectbox-options.opened li.selected {
+	background-image: none;
+}
+ul.selectbox-options li.selected {
+	display: block;
+}
+ul.selectbox-options li:hover {
+	background-color: #f5f5f5;
+}
+
+/* 
 
 .selectRowCount > ul { 
     height: 30px;
     width: 150px;
     border: 1px #000 solid;
-    float:right;
+   	position: absolute;
+   	right: 10px;
+   	top: 10px;
 }
 .selectRowCount > ul li { padding: 5px 10px; z-index: 2; }
-.selectRowCount > ul li:not(.init) { float: left; width: 130px; display: none; background: #ddd; }
-/* .selectRowCount > ul li:not(.init):hover, ul li.selected:not(.init) { background: #09f; } */
+.selectRowCount > ul li.selected{font-weight:bold;}
+.selectRowCount > ul li:not(.selected) { 
+	float: left;
+	width: 130px;
+	display: none;
+	background: #ddd;	
+}
+ul.selectbox-options li.selected,
+ul.selectbox-options li:first-child,
+ul.selectbox-options.opened li.selected:first-child {
+	background-repeat: no-repeat; background-image: url(http://rootbox.co.kr/resources/customized_checkbox/customized_selectbox.png); background-position: 100% 6px;	
+}
+.selectRowCount > ul li:not(.selected):hover, ul li.selected:not(.selected) { background: #09f; }
 .selectRowCount > ul > li { cursor: pointer; }
 
 .selectRowCount > a#submit { z-index: 1; }
-
+ */
 /*=====================댓글창======================*/
 form#commentbox{
 	border:none;
@@ -226,6 +312,15 @@ div.commentList a:hover{
 	text-decoration: underline;
 }
 
+.boardCofC{
+	line-height : 15px;
+	padding-top: 0px;
+	cursor: pointer;
+}
+
+div.list_boardcofc{
+	padding : 0px 0px 10px 20px;
+}
 
 
 
