--- a/myProject/src/main/webapp/resources/css/layout.css
+++ b/myProject/src/main/webapp/resources/css/layout.css
@@ -3,30 +3,35 @@
 /*=========레이아웃=========*/
 div#main{
 	width:100%;
-	margin:0 auto;
-	font-size:10pt;
-	font-family: "맑은 고딕";
+/* 	margin:0 auto; */
+/* 	font-size:10pt;
+	font-family: "맑은 고딕"; */
 }
+
 div#main_header{
 	width:100%;
 	height:100px;
-	margin-bottom: 10px;
-	padding: 0 10px 0 0;
+/* 	margin-bottom: 10px;
+	padding: 0 10px 0 0; */
 }
-div#main_menu{
+
+/* div#main_menu{
 	float:left;
 	width:18%;
 	min-height:400px;
-}
-div#main_body{
+} */
+
+
+div#body{
 	float:left;
 	width:100%;
 	padding:0;
+	display: inline-block;
 }
 div#main_footer{
 	clear:both;
 	width:100%;
-	background-color:yellow;
+	height:100px;
 }
 
 div#layout2_body{
@@ -35,16 +40,57 @@ div#layout2_body{
 	padding:5px 5px 30px 5px;
 }
 
+html, body {
+	position: relative;
+	height: 100%;
+}
+
+body {
+	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	color: #000;
+	margin: 0;
+	padding: 0;
+}
+
+.swiper-container {
+	width: 100%;
+	height: 100%;
+	marign-top: 0;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0;
+}
+
+.swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+	margin: 0;
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+}
 
 /*==========메뉴==========*/
 div#main_menu ul{
 	list-style:none;
 }
 
-div#main_menu ul li{
+/* div#main_menu ul li{
 	margin-bottom:5px; 
 }
-
+ */
 /*==========페이지 기본 스타일======*/
 .page-main-style{
 	width:98%;
@@ -54,7 +100,9 @@ div#main_menu ul li{
 	width:600px;
 	margin:0 auto;
 }
-/*==========메시지======*/
+
+/*
+==========메시지======
 .result-display{
 	width:400px;
 	margin:50px auto;
@@ -71,7 +119,7 @@ div#main_menu ul li{
 .error-color{
 	color:#ff0000;
 }
-/*Mypage*/
+Mypage
 .mypage-div{
 	width:48%;
 	float:left;
@@ -79,11 +127,11 @@ div#main_menu ul li{
 }
 .my-photo{
 	object-fit: cover;
-    object-position: top; /*정사각형이 아니라 직사각형일 경우 원 안에 보여지게 할 중심 이미지의 위치를 지정*/
-    border-radius: 50%;/*사각형의 모서리 둥근 정도를 지정하는 속성인데 50%를 지정하면 완전한 원이 됨*/
+    object-position: top; 정사각형이 아니라 직사각형일 경우 원 안에 보여지게 할 중심 이미지의 위치를 지정
+    border-radius: 50%;사각형의 모서리 둥근 정도를 지정하는 속성인데 50%를 지정하면 완전한 원이 됨
 }
 
-/*목록*/
+/*목록
 form#search_form{
 	border: none;
 }
@@ -112,7 +160,7 @@ table td, table th{
 	border:1px solid #000;
 	padding:5px;
 }
-/*글상세*/
+글상세
 .detail-img{
 	max-width: 500px;
 }
@@ -175,7 +223,7 @@ form#mre_form{
 	border:none;
 	margin:5px;
 }
-/*등록,수정폼*/
+등록,수정폼
 form{
 	width:500px;
 	margin:0 auto;
@@ -183,7 +231,7 @@ form{
 	padding:10px 10px 10px 30px;
 }
 
-/*summernote 용*/
+summernote 용
 form#write_form, form#update_form{
 	width:590px;
 }
@@ -202,9 +250,10 @@ input[type="text"],input[type="password"],input[type="email"]{
 }
 input[id="zipcode"]{
 	width:95px;
-}
+} */
 
 
+ 
 
 /* 헤더  ul,li style */
 
