--- a/myProject/src/main/webapp/resources/css/layout_trainerDelete.css
+++ b/myProject/src/main/webapp/resources/css/layout_trainerDelete.css
@@ -7,13 +7,14 @@ body {
   font-family: 'Inter UI', sans-serif;
   margin: 0;
 }
-
+ 
  
 .container {
   display: flex;
   height: 100%;
   margin: 0 auto;
-  width: 640px;
+   width: 450px;
+  padding-bottom: 20px;
 }
 @media (max-width: 767px) {
   .container {
