main.jsp header.jsp 경로 수정 nutriment package 업데이트

--- a/myProject/src/main/webapp/resources/css/layout.css
+++ b/myProject/src/main/webapp/resources/css/layout.css
@@ -28,6 +28,12 @@ div#body{
 	padding:0;
 	display: inline-block;
 }
+div#main_body{
+	float:left;
+	width:100%;
+	padding:0;
+	display: inline-block;
+}
 div#main_footer{
 	clear:both;
 	width:100%;
