--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -27,7 +27,7 @@ div#main_footer{
 	clear:both;
 	width:100%;
 	background-color:yellow;
-}
+} 
 
 /*==========메뉴==========*/
 div#main_menu ul{
@@ -64,6 +64,18 @@ div#main_menu ul li{
 .error-color{
 	color:#ff0000;
 }
+
+div.align-right > input{
+	margin : 10px;
+    float: right;
+    display: inline;
+    width: 70px;
+    height: 35px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    border: none;
+}
+
 /*Mypage*/
 .mypage-div{
 	width:48%;
@@ -91,95 +103,61 @@ ul.search li{
 	padding:0;
 	display:inline;
 }
-.list-space{
-	width:700px;
-	margin:10px auto;
+select#keyfield{
+	width:70px;
+	height:30px;
+	border:2px solid #8e8689;
+	border-radius: 15px;
 }
+ul.search input[type="text"]{
+    display: inline;
+    width: 280px;
+    height: 30px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    border: 2px solid #0ed9df;
+}
+div.page-main-style input[type="submit"],
+div.page-main-style input[type="button"]{
+    display: inline;
+    width: 70px;
+    height: 30px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    border: none;
+}
+
 table{
 	width:100%;
 	margin:5px auto;
 	border:1px solid #000;
+	border:0px;
 	border-collapse:collapse;
 }
-table td, table th{
+table th{
 	border:1px solid #000;
 	padding:5px;
+	border-left:none;
+	border-right:none;
 }
-/*글상세*/
-.detail-img{
-	max-width: 500px;
-}
-div#reply_div{
-	padding:5px 10px 40px 10px;
-	margin-top:10px;
-	background-color:#eeeeee;
-}
-#output_fav, .output_rfav{
-	cursor : pointer;
-}
-#output_fcount{
-	width:50px;
-	display:inline-block;
-}
-form#re_form{
-	width:650px;
-	border:none;
-}
-span.re-title{
-	color:#000;
-	font-size:12pt;
-	line-height:200%;
-}
-span.letter-count{
-	font-size:10pt;
-	color:#999;
-}
-span.form-id{
-	padding-left:93px;
-	color:#000;
-}
-textarea.rep-content{
-	width:90%;
-	height:50px;
-	margin:10px 10px;
-}
-div#re_first{
-	float:left;
-	width:70%;
-	padding-left:15px;
-	margin-bottom:10px;
-}
-div#re_second{
-	float:left;
-	width:19%;
-	margin-bottom:10px;
-}
-div#loading{
-	width:100px;
-	margin:0 auto;
-}
-div.paging-button{
-	text-align:right;
-}
-div#output{	
-	clear:both;
-}
-form#mre_form{
-	border:none;
-	margin:5px;
-}
-/*등록,수정폼*/
-form{
-	width:800px;
-	margin:0 auto;
-	border:1px solid #000;
-	padding:10px 10px 10px 30px;
+table td{
+	border:1px solid #c0c0c0;
+	padding:5px;
+	border-left:none;
+	border-right:none;
+	text-align: center;
 }
 
-/*summernote 용*/
-form#write_form, form#update_form{
-	width:590px;
+/*등록,수정폼*/
+form{
+	width:600px;
+	margin:0 auto;
+	border:2px solid #0ed9df;
+	border-radius: 15px;
+	padding:10px 10px 10px 30px;
+	overflow: hidden;
 }
+
 ul{
 	list-style:none;
 }
@@ -187,14 +165,37 @@ label{
 	width:130px;
 	float:left;
 }
-input[type="text"],input[type="password"],input[type="email"]{
+input[type="text"]{
 	width:200px;
 }
-#register_form input[id="id"]{
-	width:113px;
+input[type="text"].title{
+	width:330px;
+	height:18px;
+	margin-bottom:10px;
 }
-input[id="zipcode"]{
-	width:95px;
+input#upload{
+    display: inline;
+    width: 100px;
+    height: 30px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    border: none;	 
+}
+label.upload{
+	margin-left:130px;
+	display:block;
+	width: 130px;
+    height: 30px;
+    border-radius: 15px;
+    box-sizing: border-box;
+	background-color: #ebebeb;
+	line-height:28px;
+	padding-left:10px;
+}
+
+input[type="button"].delete_img{
+	width:130px;
+	
 }
 
 .tipBoardTable td{
@@ -272,34 +273,6 @@ ul.selectbox-options li:hover {
 	background-color: #f5f5f5;
 }
 
-/* 
-
-.selectRowCount > ul { 
-    height: 30px;
-    width: 150px;
-    border: 1px #000 solid;
-   	position: absolute;
-   	right: 10px;
-   	top: 10px;
-}
-.selectRowCount > ul li { padding: 5px 10px; z-index: 2; }
-.selectRowCount > ul li.selected{font-weight:bold;}
-.selectRowCount > ul li:not(.selected) { 
-	float: left;
-	width: 130px;
-	display: none;
-	background: #ddd;	
-}
-ul.selectbox-options li.selected,
-ul.selectbox-options li:first-child,
-ul.selectbox-options.opened li.selected:first-child {
-	background-repeat: no-repeat; background-image: url(http://rootbox.co.kr/resources/customized_checkbox/customized_selectbox.png); background-position: 100% 6px;	
-}
-.selectRowCount > ul li:not(.selected):hover, ul li.selected:not(.selected) { background: #09f; }
-.selectRowCount > ul > li { cursor: pointer; }
-
-.selectRowCount > a#submit { z-index: 1; }
- */
 /*=====================댓글창======================*/
 form#commentbox{
 	border:none;
@@ -334,4 +307,5 @@ div.list_boardcofc{
 	color:grey;
 	font-weight:bold;
 }
+
 
