--- a/myProject/src/main/webapp/resources/css/layout_trainerRegister.css
+++ b/myProject/src/main/webapp/resources/css/layout_trainerRegister.css
@@ -49,6 +49,7 @@ body{
 }
 .signup-btn:hover{
   transform: scale(0.96);
+  cursor:pointer;
 }
 .signup-form a{
   text-decoration: none;
@@ -61,4 +62,5 @@ body{
 }
 .signup-form a:hover{
   background: rgba(0,0,0,.3);
+  cursor:pointer;
 }
