--- a/myProject/src/main/webapp/resources/css/layout_findIdPw.css
+++ b/myProject/src/main/webapp/resources/css/layout_findIdPw.css
@@ -118,6 +118,7 @@ input::-moz-focus-inner {
 }
 #submit:hover{
    transform: scale(0.96);
+   cursor:pointer;
 }
 .radio_btn{
    width:15px;
@@ -126,6 +127,7 @@ input::-moz-focus-inner {
 }
 .login_btn:hover{
    transform: scale(0.96);
+   cursor:pointer;
 }
 .r_f_btn{
    width:110px;
@@ -137,6 +139,7 @@ input::-moz-focus-inner {
 }
 .r_f_btn:hover{
    transform: scale(0.96);
+   cursor:pointer;
 }
 .texts_img{
    margin-left:30px;
