--- a/myProject/src/main/webapp/resources/css/layout_login.css
+++ b/myProject/src/main/webapp/resources/css/layout_login.css
@@ -107,6 +107,7 @@ input::-moz-focus-inner {
 }
 #submit:hover{
    transform: scale(0.96);
+   cursor:pointer;
 }
 .radio_btn{
    width:15px;
@@ -115,6 +116,7 @@ input::-moz-focus-inner {
 }
 .login_btn:hover{
    transform: scale(0.96);
+   cursor:pointer;
 }
 .r_f_btn{
    width:110px;
@@ -126,6 +128,7 @@ input::-moz-focus-inner {
 }
 .r_f_btn:hover{
    transform: scale(0.96);
+   cursor:pointer;
 }
 .texts_img{
    margin-left:30px;
