--- a/myProject/src/main/webapp/resources/css/layout_trainerDelete.css
+++ b/myProject/src/main/webapp/resources/css/layout_trainerDelete.css
@@ -98,6 +98,7 @@ input::-moz-focus-inner {
 }
 #submit:hover{
 	transform: scale(0.96);
+	cursor:pointer;
 }
 .radio_btn{
 	width:15px;
@@ -107,6 +108,7 @@ input::-moz-focus-inner {
 
 .login_btn:hover{
 	transform: scale(0.96);
+	cursor:pointer;
 }
 .r_f_btn{
 	width:110px;
@@ -118,6 +120,7 @@ input::-moz-focus-inner {
 }
 .r_f_btn:hover{
 	transform: scale(0.96);
+	cursor:pointer;
 }
 .texts_img{
 	margin-left:30px;
@@ -173,14 +176,17 @@ input::-moz-focus-inner {
 
 .detail_modify_btn:hover{
 	transform:scale(1.05);
+	cursor:pointer;
 }
 
 .password_modify_btn:hover{
 	transform:scale(1.05);
+	cursor:pointer;
 }
 
 .delete_btn:hover{
 	transform:scale(1.05);
+	cursor:pointer;
 }
 #member_modify-form{
   width: 350px;
