--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -117,6 +117,7 @@ ul.search input[type="text"]{
     box-sizing: border-box;
     border: 2px solid #0ed9df;
 }
+
 div.page-main-style input[type="submit"],
 div.page-main-style input[type="button"]{
     display: inline;
@@ -125,6 +126,7 @@ div.page-main-style input[type="button"]{
     border-radius: 15px;
     box-sizing: border-box;
     border: none;
+    cursor: pointer;
 }
 
 table{
@@ -195,7 +197,7 @@ label.upload{
 
 input[type="button"].delete_img{
 	width:130px;
-	
+	cursor: pointer;
 }
 
 .tipBoardTable td{
@@ -278,8 +280,12 @@ form#commentbox{
 	border:none;
 }
 input#comment{
-	width:500px;
-	height:30px;
+    display: inline;
+    width: 400px;
+    height: 37px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    border: 2px solid #0ed9df;
 }
 div.commentList a:hover{
 	cursor: pointer;
