--- a/myProject/src/main/webapp/resources/css/layout_feedWrite.css
+++ b/myProject/src/main/webapp/resources/css/layout_feedWrite.css
@@ -105,6 +105,7 @@ fieldset{
 .steps li.is-active{
   border-bottom: 1px solid #3498db;
   color: #3498db;
+  border: 1px solid #0de9df;
 }
 
 /* FORM */
