--- a/myProject/src/main/webapp/resources/css/layout_feedWrite.css
+++ b/myProject/src/main/webapp/resources/css/layout_feedWrite.css
@@ -22,7 +22,8 @@ p, li, a{
 fieldset{
   margin: 0;
   padding: 0;
-  border: none;
+  border: 1px solid #0de9df;
+  border-radius: 15px;
 }
 
 /* GRID */
@@ -55,6 +56,7 @@ fieldset{
 .container{
   width: 100%;
   max-width: 700px;
+  height: 500px;
   margin: 0 auto;
   position: relative;
 }
@@ -88,7 +90,7 @@ fieldset{
 
 .steps{
   list-style-type: none;
-  margin: 0;
+  margin-left: 100px;
   padding: 0;
   background-color: #fff;
   text-align: center;
@@ -97,15 +99,14 @@ fieldset{
 
 .steps li{
   display: inline-block;
-  margin: 20px;
+  padding: 20px;
   color: #ccc;
-  padding-bottom: 5px;
+  border: 1px solid;
 }
 
 .steps li.is-active{
   border-bottom: 1px solid #3498db;
   color: #3498db;
-  border: 1px solid #0de9df;
 }
 
 /* FORM */
@@ -139,6 +140,7 @@ fieldset{
 
 .form-wrapper .section h3{
   margin-bottom: 30px;
+  border: 1px solid #0de9df;
 }
 
 .form-wrapper .section.is-active{
