--- a/myProject/src/main/webapp/resources/css/layout_memberRegister.css
+++ b/myProject/src/main/webapp/resources/css/layout_memberRegister.css
@@ -34,7 +34,6 @@ body{
   font-family: "montserrat",sans-serif;
 }
 .txtb{
-  
   background: rgba(255,255,255,.5);
   border-radius: 6px;
 }
@@ -61,5 +60,16 @@ body{
 }
 .signup-form a:hover{
   background: rgba(0,0,0,.3);
+  cursor:pointer;
+}
+.btn_findZip:hover{
+  text-decoration: none;
+  color: #000;
+  background: #a6e9ff;
+  font-family: "montserrat",sans-serif;
+  font-size: 14px;
+  padding: 10px;
+  transition: 0.8s;
+  display: block;
   cursor:pointer;
 }
