--- a/myProject/src/main/webapp/resources/css/layout_trainerRegister.css
+++ b/myProject/src/main/webapp/resources/css/layout_trainerRegister.css
@@ -64,3 +64,14 @@ body{
   background: rgba(0,0,0,.3);
   cursor:pointer;
 }
+.btn_findZip:hover{
+  text-decoration: none;
+  color: #000;
+  background: #a6e9ff;
+  font-family: "montserrat",sans-serif;
+  font-size: 14px;
+  padding: 10px;
+  transition: 0.8s;
+  display: block;
+  cursor:pointer;
+}
