--- a/myProject/src/main/webapp/resources/css/layout_feedWrite.css
+++ b/myProject/src/main/webapp/resources/css/layout_feedWrite.css
@@ -53,6 +53,20 @@ fieldset{
   margin-left: 0;
 }
 
+.feed_type{
+	width: 100%;
+	height: 40px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.feed_auth{
+	width: 100%;
+	height: 40px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 .container{
   width: 100%;
   max-width: 700px;
@@ -151,7 +165,7 @@ fieldset{
   transform: scale(1, 1);
 }
 
-.form-wrapper .button, .form-wrapper .submit{
+.form-wrapper .button_next, .form-wrapper .submit, .form-wrapper .button_before, .form-wrapper .button{
   background-color: #3498db;
   display: inline-block;
   padding: 8px 30px;
@@ -159,9 +173,9 @@ fieldset{
   cursor: pointer;
   font-size: 14px !important;
   font-family: 'Open Sans', sans-serif !important;
-  position: absolute;
   right: 20px;
   bottom: 20px;
+  margin-top: 10px;
 }
 
 .form-wrapper .submit{
