--- a/myProject/src/main/webapp/resources/css/nutrimentSearch.css
+++ b/myProject/src/main/webapp/resources/css/nutrimentSearch.css
@@ -4,6 +4,7 @@ div#nutriList{
 	width:1020px;
 	height:80%;
 	float:left;
+	margin-top:60px;
 	margin-bottom: 50px;
 	margin-left: 23%;
 	display: block;
