--- a/myProject/src/main/webapp/resources/css/layout_feedWrite.css
+++ b/myProject/src/main/webapp/resources/css/layout_feedWrite.css
@@ -149,7 +149,8 @@ fieldset{
   text-align: center;
   position: absolute;
   width: 100%;
-  min-height: 300px
+  min-height: 300px;
+  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
 }
 
 .form-wrapper .section h3{
