--- a/myProject/src/main/webapp/resources/css/feedStyle.css
+++ b/myProject/src/main/webapp/resources/css/feedStyle.css
@@ -31,6 +31,11 @@ img.thumbnail{
 	border-radius:15px;
 }
 
+div.textArea{
+	position: relative;
+	border:1px solid red;
+}
+
 
 /*리모컨 버튼*/
 .writeButton {
