--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -323,7 +323,8 @@ div.list_boardcofc{
 
 /*=====================알림=====================*/
 .table_notice a{
-	color:grey;
+	/*메인색보다는 좀더 진하게 설정함*/
+	color:#0cdacf;
 	font-weight:bold;
 	cursor:pointer;
 }
