--- a/myProject/src/main/webapp/resources/css/layout_feedReco.css
+++ b/myProject/src/main/webapp/resources/css/layout_feedReco.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 .masonry {
-  columns: 4;
+  columns: 3;
   column-gap: 16px;
 }
-@media (max-width: 1200px) {
-  .masonry {
-    columns: 3;
-  }
+.page_feedReco{
+	width: 80%;
+	margin-left: 10%;
+	margin-top: 3%;
+	flex-wrap : wrap;
 }
 @media (max-width: 992px) {
   .masonry {
@@ -14,10 +15,14 @@
     margin-bottom: 10px;
   }
 }
+.feeds{
+	padding-top: 1%;
+	padding-bottom:  1%;
+}
 .masonry .grid {
   margin-bottom: 16px;
   position: relative;
-  height: 350px;
+  height: 100%;
 }
 .masonry .grid:before {
   border-radius: 5px;
@@ -31,7 +36,7 @@
 }
 .masonry .grid img {
   width: 100%;
-  height: 350px;
+  height: 100%;
   border-radius: 5px;
 }
 .masonry .grid__title {
