hw 리스트 css 마무리

--- a/myProject/src/main/webapp/resources/css/layout_hwList.css
+++ b/myProject/src/main/webapp/resources/css/layout_hwList.css
@@ -59,7 +59,10 @@ body {
 }
 .class-boxes{
 	overflow:hidden;
-	padding-top: 10px;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	width: 90%;
+	margin-left: 10%;
 }
 
 .gallery-box-container{
