아더퍼스널리스트 css 완성

--- a/myProject/src/main/webapp/resources/css/layout_otherPersonalList.css
+++ b/myProject/src/main/webapp/resources/css/layout_otherPersonalList.css
@@ -97,6 +97,20 @@ select:focus {
 }
 .myId{
 	padding-top: 0.7%;
+	padding-left: 15%;
+	padding-left: 155px;
+}
+.Btn_training{
+	border: 1px solid black;
+	border-radius: 40px;
+	margin-bottom: 1%;
+	margin-left: 5px%;
+}
+.Btn_follow{
+	border: 1px solid black;
+	border-radius: 40px;
+	margin-bottom: 1%;
+	margin-left: 33px;
 }
 .intro{
 	float:right;
