--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -322,10 +322,11 @@ div.list_boardcofc{
 
 /*=====================알림=====================*/
 
-.table_notice #more1,
-.table_notice #more2{
+.table_notice .more1,
+.table_notice .more2{
 	color:grey;
 	font-size:12px;
+	font-weight:normal;
 }
 
 .table_notice a{
