--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -38,7 +38,7 @@ div#main_menu ul li{
 /*==========페이지 기본 스타일======*/
 .page-main-style{
 	width: 900px;
-    margin: 30px 200px 30px 350px;
+    margin: 30px 30% 30px 32%;
 }
 .one-page{
 	width:600px;
