게시판 글자수 유효성 추가 및 관리자 삭제 권한 추가 수정 및 신고하기 기능 추가한데까

--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -168,14 +168,12 @@ input[type="text"]{
 	width:200px;
 }
 input[type="text"].title{
-	width:330px;
+	width:373px;
 	height:18px;
 	margin-bottom:10px;
 }
 input#upload{
     display: inline;
-    width: 100px;
-    height: 30px;
     border-radius: 15px;
     box-sizing: border-box;
     border: none;	 
@@ -271,7 +269,12 @@ ul.selectbox-options li.selected {
 ul.selectbox-options li:hover {
 	background-color: #f5f5f5;
 }
-
+/*=========알림=========*/
+.alarm{
+	font-weight:bold;
+	color:grey;
+	cursor:pointer;
+}
 /*=====================댓글창======================*/
 form#commentbox{
 	border:none;
