관리자 신고 글 관리 기능 추

--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -275,6 +275,11 @@ ul.selectbox-options li:hover {
 	color:grey;
 	cursor:pointer;
 }
+.alarm_reset{
+	font-weight:bold;
+	color:grey;
+	cursor:pointer;
+}
 /*=====================댓글창======================*/
 form#commentbox{
 	border:none;
