줄바꿈 표시되게 수

--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -73,6 +73,7 @@ div.align-right > input{
     border: none;
 }
 
+
 /*Mypage*/
 .mypage-div{
 	width:48%;
@@ -125,6 +126,10 @@ div.page-main-style input[type="button"]{
     border: none;
     cursor: pointer;
 }
+
+
+br { letter-spacing:0px; }
+
 
 table{
 	width:100%;
