--- a/myProject/src/main/webapp/resources/css/layout_board.css
+++ b/myProject/src/main/webapp/resources/css/layout_board.css
@@ -179,6 +179,7 @@ input[type="text"].title{
 }
 input#upload{
     display: inline;
+    width: 100px;
     border-radius: 15px;
     box-sizing: border-box;
     border: none;	 
